<resources>
    <string name="app_name">Guide</string>
    <string name="exit">退出</string>
    <string name="redo">重做</string>
    <string name="udo">撤销</string>
    <string name="clear">清空</string>
    <string name="meetingTheme">会议主题:</string>
    <string name="createUser">创建人员:</string>
    <string name="user">志向</string>
    <string name="beginTime">开始时间:</string>
    <string name="alluser">参与人员:</string>
    <string name="filepag1">文件夹一</string>
    <string name="filepag2">文件夹二</string>
    <string name="invite">邀请</string>
    <string name="userId">用户id：</string>
    <string name="watch_more_videos">Watch more videos</string>
    <string name="try_a_faster_way_to_get_r_n_free_credits">Try a faster way to get \r\n free credits</string>
    <string name="check_in_for_1_3_free_credits">Check in for 1-3 free credits</string>
    <string name="no_video_ads_at_this_moment_n_no_worry_try_following_fast_way_n_to_get_free_credits">No video ads at this moment!\n No worry,try following fast way \n to get free credits:</string>
    <string name="test_lucky_for_1_free_credits">Test lucky for 1 free credits</string>
    <string name="come_back_tomorrow_for_free_n_credits_that_s_free_credits_for_n_you_every_day">Come back tomorrow for free \n credits.That\'s free credits for \n you every day!</string>
    <string name="you_can_check_in_daily_to_get_n_free_credits_that_s_free_credits_n_for_you_every_day">You can check in daily to get \n free credits That\'s free credits \n for you every day!</string>
</resources>
