<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"/>
    <ScrollView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/laymain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btn_exit"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:background="#f45"
                    android:layout_marginTop="30dp"
                    android:onClick="exit"
                    android:text="@string/exit"/>
                <Button
                    android:id="@+id/btn_exit2"
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:textSize="20dp"
                    android:background="#f45"
                    android:layout_marginTop="30dp"
                    android:text="@string/exit"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meetingTheme"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/tv_meetingTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meetingTheme"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#ccc"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <LinearLayout
                    android:id="@+id/lay1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:onClick="exit"
                    android:padding="15dp">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/createUser"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/tv_createUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#ccc"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <LinearLayout
                    android:id="@+id/lay2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beginTime"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/tv_meetingTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="13:10"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="#ccc"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:id="@+id/lay_users"
                    android:clickable="true">
                    <TextView
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alluser"
                        android:textSize="20dp"/>

                    <TextView
                        android:id="@+id/tv_all_user"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="test"
                        android:textSize="20dp"
                        android:layout_marginLeft="20dp"/>
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.aguai.guide.GuideContainer
        android:id="@+id/guideContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        >
        <com.aguai.guide.GuideView
            android:id="@+id/guideView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.aguai.guide.GuideContainer>

</FrameLayout>

